--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./index.js",
+    "start": "nodemon -L",
     "test": "mocha -w ./tests/**/*.spec.js"
   },
   "author": "Henry",
@@ -22,9 +22,11 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "googleapis": "^122.0.0",
     "jsonwebtoken": "^9.0.1",
     "mercadopago": "^1.5.17",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.4",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5"
   },
